bynkc/tests/fixtures/positive/216_cross_context_caller/src/app/a.karn
context app.a

consumes app.b as B

service ask {
  on call(ping: String) -> Effect[Result[String, String]] {
    let r <- B.whoami(ping)
    r
  }
}
