bynkc/tests/fixtures/negative/206_actor_binder_shadows_param/src/demo.karn
context demo

service api from http {
  on POST("/echo") by body: Visitor (body: String) -> Effect[HttpResult[String]] {
    Ok("ok")
  }
}
